simple intro to test appearence

--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-<h1>THIS IS A BEGGINING</h1>
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ibrahim Samson</title>
+</head>
+<body style="background-color: aquamarine; font-family: Arial, Helvetica, sans-serif; padding:5px; text-align: center">
+    <div>
+        <h1>Jacob ibrahim Samson</h1>
+        <p>I am a self taught backend developer living in china.
+        I am more comfortable dealing with backend rather than front end but not limited to Back end development.
+        I have an experince with python language, Django, Linux , Javascript, Css, HTML, C programming. 
+        </p>
+        <p>
+            Apart from being a developer I am a Quality assurance tester. This Was my first Spicy tester that led me
+             to develop interest in Programming. I enjoy hunting hidden bugs either logical, performance, functional or automation.
+
+        </p>
+        <p>
+            Further more Im an animator and a 3D designer. I use blender to design 3d objects and create animations.
+             Apart from blender I write python blender scripts.
+        </p>
+    </div>
+</body>
